Adiciona nova section para eventos e estilos correspondentes

--- a/src/index.html
+++ b/src/index.html
@@ -39,6 +39,17 @@
             </div>
         </div>
     </header>
+    <section class="event">
+        <div class="container">
+            <div class="event__details">
+                <h2 class="event__details__title">Front-end</h2>
+                <p class="event__details__description">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum aut saepe quisquam magni eaque aliquam nam laboriosam suscipit expedita error? Expedita totam blanditiis architecto ea, fugit soluta non praesentium atque?
+                </p>
+            </div>
+            <img class="event__image" src="./images/frontend.png" alt="">
+        </div>
+    </section>
 
 
 
